updated UI version

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <!-- chess game -->
         <div class="button-borders">
-            <a href="chess game/index.html" target="_blank"><button class="primary-button"> Chess Game</button></a>
+            <a href="chess game/index.html" target="_blank"><button class="primary-button"> Dice Game</button></a>
         </div>
         <!-- age calculator -->
         <div class="button-borders">
