--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
         <div class="button-borders">
             <a href="attendence checker/index.html" target="_blank"><button class="primary-button"> Attendence Checker</button></a>
         </div>
+        <!-- digital clock -->
+        <div class="button-borders">
+            <a href="digital clock/index.html" target="_blank"><button class="primary-button"> Digital Clock</button></a>
+        </div>
+
     </div>
     </div>
     <footer>
