--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         <div class="button-borders">
             <a href="digital clock/index.html" target="_blank"><button class="primary-button"> Digital Clock</button></a>
         </div>
+        <!-- calculator -->
+        <div class="button-borders">
+            <a href="calculator/index.html" target="_blank"><button class="primary-button"> Calculator</button></a>
+        </div>
 
     </div>
     </div>
