image gallery added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         <div class="button-borders">
             <a href="calculator/index.html" target="_blank"><button class="primary-button"> Calculator</button></a>
         </div>
+        <!-- image gallery -->
+        <div class="button-borders">
+            <a href="image gallery/index.html" target="_blank"><button class="primary-button"> Image Gallery</button></a>
+        </div>
 
     </div>
     </div>
