text editor added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
             <a href="image gallery/index.html" target="_blank"><button class="primary-button"> Image Gallery</button></a>
         </div>
 
+        <!-- text editor -->
+        <div class="button-borders">
+            <a href="text editor/index.html" target="_blank"><button class="primary-button"> Text Editor</button></a>
+        </div>
+
+
     </div>
     </div>
     <footer>
