--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             <a href="text editor/index.html" target="_blank"><button class="primary-button"> Text Editor</button></a>
         </div>
 
+        <!-- todo app -->
+        <div class="button-borders">
+            <a href="to do app/index.html" target="_blank"><button class="primary-button"> Todo App</button></a>
+        </div>
 
     </div>
     </div>
