finance tracker added

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
             <a href="to do app/index.html" target="_blank"><button class="primary-button"> Todo App</button></a>
         </div>
 
+        <!-- finance tracker app  -->
+
+        <div class="button-borders">
+            <a href="finance tracker/index.html" target="_blank"><button class="primary-button"> Finance Tracker</button></a>
+        </div>
     </div>
     </div>
     <footer>
