--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
         <div class="button-borders">
             <a href="finance tracker/index.html" target="_blank"><button class="primary-button"> Finance Tracker</button></a>
         </div>
+        <!-- all assignments -->
+    
+                <div class="button-borders">
+            <a href="all assignments'/index.html"target = "_blank"><button class="primary-button"> All Assignments</button></a>
+        </div>
     </div>
     </div>
     <footer>
@@ -130,7 +135,7 @@
                 Github
             </button></a>
 
-    </footer>
+        </footer>
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
