--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
                 <div class="button-borders">
             <a href="all assignments'/index.html"target = "_blank"><button class="primary-button"> All Assignments</button></a>
         </div>
+        <!-- quiz game -->
+
+        <div class="button-borders">
+            <a href="quiz game/index.html" target="_blank"><button class="primary-button"> Quiz Game</button></a>
+        </div>
+
+
     </div>
     </div>
     <footer>
