--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="button-borders">
             <a href="quiz game/index.html" target="_blank"><button class="primary-button"> Quiz Game</button></a>
         </div>
-
+        <!-- next assignments -->
 
     </div>
     </div>
