--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
         <div class="button-borders">
             <a href="quiz game/index.html" target="_blank"><button class="primary-button"> Quiz Game</button></a>
         </div>
+
+        <!-- firebase authentication -->
+
+        <div class="button-borders">
+            <a href="firebase/index.html" target="_blank"><button class="primary-button"> Firebase Authentication</button></a>
+        </div>
+
         <!-- next assignments -->
 
     </div>
