firebase profile added

--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
             <a href="firebase/index.html" target="_blank"><button class="primary-button"> Firebase Authentication</button></a>
         </div>
 
+        <!-- profile firebase -->
+        <div class="button-borders">
+            <a href="profile/index.html" target="_blank"><button class="primary-button"> profile</button></a>
+        </div>
+
         <!-- next assignments -->
 
     </div>
