--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <!-- profile firebase -->
         <div class="button-borders">
-            <a href="food sharing app/index.html" target="_blank"><button class="primary-button"> Food Sharing App</button></a>
+            <a href="profile/index.html" target="_blank"><button class="primary-button"> Profile</button></a>
         </div>
 
         <!-- next assignments -->
