test-task added

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <!-- profile firebase -->
         <div class="button-borders">
-            <a href="profile/index.html" target="_blank"><button class="primary-button"> Profile</button></a>
+            <a href="test-task/index.html" target="_blank"><button class="primary-button"> Test-Task</button></a>
         </div>
 
         <!-- next assignments -->
